--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOTION STATION</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+
 </head>
 
 <body>
+
     <div id="sidebar-component">
         <sidebar></sidebar>
     </div>
@@ -48,7 +50,7 @@
             </div>
         </section>
         <section class="container-fluid card-list">
-            <h2>Latest Releases</h2>
+            <h3>Latest Releases</h3>
             <div class="row">
                 <div class="col-lg">
                     <div class="card card-left">
@@ -56,9 +58,16 @@
                         <div class="card-body">
                             <div>
                                 <h5 class="card-title text-primary">Thánh Võ Tinh Thần | Chap 35</h5>
-                                <small>12.374 views | 2 tháng trước</small>
+                                <p>12.374 views | 2 tháng trước</p>
                             </div>
-                            <div class="badge badge-secondary">Read Avaliable</div>
+                            <div>
+                                <div class="badge badge-secondary">Read Avaliable</div>
+                                <div class="dotted-group">
+                                    <span class="dotted dot-primary"></span>
+                                    <span class="dotted dot-secondary"></span>
+                                    <span class="dotted dot-success"></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -66,15 +75,29 @@
                     <div class="card card-middle">
                         <img class="card-img" src="assets/images/4.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title text-primary">Thánh Võ Tinh Thần | Chap 35</h5>
-                            <small>12.374 views | 2 tháng trước</small>
+                            <div>
+                                <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
+                                <p>12.374 views | 2 tháng trước</p>
+                            </div>
+                            <div class="dotted-group">
+                                <span class="dotted dot-primary"></span>
+                                <span class="dotted dot-secondary"></span>
+                                <span class="dotted dot-success"></span>
+                            </div>
                         </div>
                     </div>
                     <div class="card card-middle">
                         <img class="card-img" src="assets/images/hqdefault.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
-                            <small>12.374 views | 2 tháng trước</small>
+                            <div>
+                                <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
+                                <p>12.374 views | 2 tháng trước</p>
+                            </div>
+                            <div class="dotted-group">
+                                <span class="dotted dot-primary"></span>
+                                <span class="dotted dot-secondary"></span>
+                                <span class="dotted dot-success"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -84,22 +107,28 @@
                         <div class="card-body">
                             <div>
                                 <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
-                                <small>12.374 views | 2 tháng trước</small>
+                                <p>12.374 views | 2 tháng trước</p>
                             </div>
-                            <div class="badge badge-secondary">Read Avaliable</div>
+                            <div>
+                                <div class="badge badge-secondary">Read Avaliable</div>
+                                <div class="dotted-group">
+                                    <span class="dotted dot-primary"></span>
+                                    <span class="dotted dot-secondary"></span>
+                                    <span class="dotted dot-success"></span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <div class="showmore-section">
-            <button type="button" class="btn btn-primary">Show more</button>
+            <button type="button" class="btn btn-primary btn-lg">Show more</button>
         </div>
         <section class="info-section">
             <div class="row">
                 <div class="info-content col-lg-6 offset-lg-3">
-                    <h1><b>Why</b><span>MOTION. STATION?</span>
-                    </h1>
+                    <h3><b>Why</b><span>MOTION. STATION?</span></h3>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
                         eirmod
                         tempor
@@ -121,7 +150,7 @@
         <section class="contact-section">
             <img src="assets/Mask Group 5.svg" alt="contact-image">
             <div class="contact-info">
-                <h1>Connect with us</h1>
+                <h3>Connect with us</h3>
                 <div class="contact-social-network">
                     <a href="#" class="icon">
                         <img class="facebook" src="/assets/facebook.svg" alt="Facebook">
@@ -133,6 +162,7 @@
             </div>
         </section>
     </main>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
