--- a/pages/pagemanagement.html
+++ b/pages/pagemanagement.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
+    <!-- Vue sidebar component -->
     <div id="sidebar-component">
         <sidebar></sidebar>
     </div>
     <main>
-        <button class="btn btn-primary btn-sm" id="side-bar-button">
+        <button id="sidebar-button" class="btn btn-primary btn-sm">
             <img alt="list-icon" src="/assets/list.svg">
         </button>
         <section id="header-img">
@@ -22,7 +23,7 @@
                 <img src="/assets/images/avatar.png" alt="avatar">
             </div>
         </section>
-        <section class="container-fluid" id="page-management">
+        <section id="page-management" class="container-fluid">
             <h4>Creator Name</h4>
             <p>2,024 Following</p>
             <div class="social-group">
@@ -72,7 +73,6 @@
             </div>
         </section>
     </main>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
