--- a/pages/payment.html
+++ b/pages/payment.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
+    <!-- Vue sidebar component -->
     <div id="sidebar-component">
         <sidebar></sidebar>
     </div>
     <main>
-        <button class="btn btn-primary btn-sm" id="side-bar-button">
+        <button id="sidebar-button" class="btn btn-primary btn-sm" >
             <img alt="list-icon" src="/assets/list.svg">
         </button>
         <section id="payment">
@@ -79,7 +80,7 @@
                     </div>
                 </div>
             </form>
-            <div class="showmore-section">
+            <div class="btn-centered">
                 <button type="button" class="btn btn-primary btn-lg">Confirm</button>
             </div>
         </section>
