--- a/pages/createaccount.html
+++ b/pages/createaccount.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-
+    <!-- Vue sidebar component -->
     <div id="sidebar-component">
         <sidebar></sidebar>
     </div>
     <main>
-        <button class="btn btn-primary btn-sm" id="side-bar-button">
+        <button id="sidebar-button" class="btn btn-primary btn-sm">
             <img alt="list-icon" src="/assets/list.svg">
         </button>
         <section id="create-account">
-            <div class="button-group">
+            <div class="btn-group">
                 <button class="btn btn-outline-secondary btn-lg">Tạo tài khoản</button>
                 <button class="btn btn-outline-dark btn-lg">Đăng Nhập</button>
             </div>
@@ -44,9 +44,9 @@
                         <label for="confirmPassword">Confirm Password</label>
                         <input type="password" name="confirmPassword" id="confirmPassword" class="form-control">
                     </div>
-                    <div class="form-group" id="choose-language">
-                        <label for="chooseLanguage">Choose Language</label>
-                        <select>
+                    <div class="form-group">
+                        <label for="chooseLanguage" style="display:block">Choose Language</label>
+                        <select class="form-control">
                             <option value="en">English</option>
                             <option value="fr">French</option>
                             <option value="it">Italian</option>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </form>
-            <div class="showmore-section">
+            <div class="btn-centered">
                 <button class="btn btn-secondary btn-lg">Create Account</button>
             </div>
             <p>Have an account? <a href="#">Sign In</a></p>
