--- a/pages/premium.html
+++ b/pages/premium.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <div id="sidebar-component">
+     <!-- Vue sidebar component -->
+     <div id="sidebar-component">
         <sidebar></sidebar>
     </div>
     <main>
-        <button class="btn btn-primary btn-sm" id="side-bar-button">
+        <button id="sidebar-button" class="btn btn-primary btn-sm" >
             <img alt="list-icon" src="/assets/list.svg">
         </button>
         <section id="premium">
