--- a/index.html
+++ b/index.html
@@ -5,14 +5,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MOTION STATION</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <div id="sidebar-component">
-        <sidebar></sidebar>
-    </div>
+    <nav class="sidebar">
+        <div class="sidebar-content">
+            <h2>MOTION STATION</h2>
+            <select class="form-control">
+                <option value="0" disabled>Choose Language</option>
+                <option value="1">English</option>
+                <option value="2">Korean</option>
+                <option value="3">Vietnamese</option>
+                <option value="4">Japanese</option>
+            </select>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <a href="/index.html">
+                        <img src="/assets/Group 398.svg" alt="Dashboard">
+                        <span>Dashboard</span>
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/pages/supscriptions.html">
+                        <img src="/assets/Group 399.svg" alt="Supscriptions">
+                        <span>Supscriptions</span>
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/pages/premium.html">
+                        <img src="/assets/Path 242.svg" alt="Premium">
+                        <span class="text-premium">Premium</span>
+                    </a>
+                </li>
+                <li class="list-group-item line-bottom"></li>
+                <li class="list-group-item">
+                    <a href="/pages/uploadvideo.html">
+                        <img src="/assets/Group 400.svg" alt="Upload">
+                        <span>Upload</span>
+                    </a>
+                </li>
+                <li class="list-group-item login">
+                    <a href="/pages/createaccount.html">
+                        <img src="/assets/Avatar.svg" alt="avatar">
+                        <span>Name Surname/Log in</span>
+                    </a>
+                </li>
+                <li class="list-group-item line-top"></li>
+                <li class="list-group-item">
+                    <h6>IMAGES THAT COMES TO LIFE</h6>
+                </li>
+                <li class="list-group-item social-network">
+                    <a href="#" class="icon">
+                        <img class="facebook" src="/assets/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="#" class="icon">
+                        <img class="instagram" src="/assets/instagram.svg" alt="Instagram">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <main>
         <section class="header-img">
             <button id="sidebar-button" class="btn btn-primary btn-sm">
@@ -30,8 +83,7 @@
                     </p>
                     <div class="tag">
                         <span class="badge badge-pill badge-primary"> English</span>
-                        <span class="badge badge-pill badge-warning text-white">
-                            Korean</span>
+                        <span class="badge badge-pill badge-warning">Korean</span>
                         <span class="badge badge-pill badge-success"> Vietnamese</span>
                         <span class="badge badge-pill badge-secondary"> Japanese</span>
                     </div>
@@ -48,20 +100,30 @@
             <div class="row">
                 <div class="col-lg">
                     <div class="card card-left">
-                        <img class="card-img" src="assets/images/1.png" alt="Card image cap" />
+                        <div class="card-img-gradient">
+                            <img class="card-img" src="assets/images/1.png" alt="Card image cap" />
+                            <div class="tag">
+                                <span class="badge badge-pill badge-primary"> English</span>
+                                <span class="badge badge-pill badge-warning">Korean</span>
+                                <span class="badge badge-pill badge-success"> Vietnamese</span>
+                                <span class="badge badge-pill badge-secondary"> Japanese</span>
+                            </div>
+                        </div>
                         <div class="card-body">
-                            <div>
-                                <h5 class="card-title text-primary">
+                            <div class="card-first">
+                                <h5 class="card-title">
                                     Thánh Võ Tinh Thần | Chap 35
                                 </h5>
-                                <p>12.374 views | 2 tháng trước</p>
+                                <a href="/pages/watch&read.html" class="btn btn-secondary btn-sm">Read Avaliable</a>
                             </div>
-                            <div>
-                                <div class="badge badge-secondary">Read Avaliable</div>
-                                <div class="dotted-group">
-                                    <span class="dotted dot-primary"></span>
-                                    <span class="dotted dot-secondary"></span>
-                                    <span class="dotted dot-success"></span>
+                            <div class="card-second">
+                                <p>12.374 views | 2 tháng trước</p>
+                                <div class="dot-group">
+                                    <svg height="20" width="40">
+                                        <circle cx="6" cy="10" r="5" class="dot-primary" />
+                                        <circle cx="20" cy="10" r="5" class="dot-secondary" />
+                                        <circle cx="35" cy="10" r="5" class="dot-success" />
+                                    </svg>
                                 </div>
                             </div>
                         </div>
@@ -69,48 +131,82 @@
                 </div>
                 <div class="col-lg">
                     <div class="card card-middle">
-                        <img class="card-img" src="assets/images/4.png" alt="Card image cap" />
-                        <div class="card-body">
-                            <div>
-                                <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
-                                <p>12.374 views | 2 tháng trước</p>
+                        <div class="card-img-gradient">
+                            <img class="card-img" src="assets/images/4.png" alt="Card image cap" />
+                            <div class="tag">
+                                <span class="badge badge-pill badge-primary"> English</span>
+                                <span class="badge badge-pill badge-warning">Korean</span>
+                                <span class="badge badge-pill badge-success"> Vietnamese</span>
+                                <span class="badge badge-pill badge-secondary"> Japanese</span>
                             </div>
-                            <div class="dotted-group">
-                                <span class="dotted dot-primary"></span>
-                                <span class="dotted dot-secondary"></span>
-                                <span class="dotted dot-success"></span>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-first">
+                                <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
+                            </div>
+                            <div class="card-second">
+                                <p>12.374 views | 2 tháng trước</p>
+                                <div class="dot-group">
+                                    <svg height="20" width="40">
+                                        <circle cx="6" cy="10" r="5" class="dot-primary" />
+                                        <circle cx="20" cy="10" r="5" class="dot-secondary" />
+                                        <circle cx="35" cy="10" r="5" class="dot-success" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="card card-middle">
-                        <img class="card-img" src="assets/images/hqdefault.png" alt="Card image cap" />
-                        <div class="card-body">
-                            <div>
-                                <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
-                                <p>12.374 views | 2 tháng trước</p>
+                        <div class="card-img-gradient">
+                            <img class="card-img" src="assets/images/hqdefault.png" alt="Card image cap" />
+                            <div class="tag">
+                                <span class="badge badge-pill badge-primary"> English</span>
+                                <span class="badge badge-pill badge-warning">Korean</span>
+                                <span class="badge badge-pill badge-success"> Vietnamese</span>
+                                <span class="badge badge-pill badge-secondary"> Japanese</span>
                             </div>
-                            <div class="dotted-group">
-                                <span class="dotted dot-primary"></span>
-                                <span class="dotted dot-secondary"></span>
-                                <span class="dotted dot-success"></span>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-first">
+                                <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
+                            </div>
+                            <div class="card-second">
+                                <p>12.374 views | 2 tháng trước</p>
+                                <div class="dot-group">
+                                    <svg height="20" width="40">
+                                        <circle cx="6" cy="10" r="5" class="dot-primary" />
+                                        <circle cx="20" cy="10" r="5" class="dot-secondary" />
+                                        <circle cx="35" cy="10" r="5" class="dot-success" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg">
                     <div class="card card-right">
-                        <img src="assets/images/2.png" class="card-img" alt="Card image cap" />
-                        <div class="card-body">
-                            <div>
-                                <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
-                                <p>12.374 views | 2 tháng trước</p>
+                        <div class="card-img-gradient">
+                            <img src="assets/images/2.png" class="card-img" alt="Card image cap" />
+                            <div class="tag">
+                                <span class="badge badge-pill badge-primary"> English</span>
+                                <span class="badge badge-pill badge-warning">Korean</span>
+                                <span class="badge badge-pill badge-success"> Vietnamese</span>
+                                <span class="badge badge-pill badge-secondary"> Japanese</span>
                             </div>
-                            <div>
-                                <div class="badge badge-secondary">Read Avaliable</div>
-                                <div class="dotted-group">
-                                    <span class="dotted dot-primary"></span>
-                                    <span class="dotted dot-secondary"></span>
-                                    <span class="dotted dot-success"></span>
+                        </div>
+                        <div class="card-body">
+                            <div class="card-first">
+                                <h5 class="card-title">Thánh Võ Tinh Thần | Chap 35</h5>
+                                <a href="/pages/watch&read.html" class="btn btn-secondary btn-sm">Read Avaliable</a>
+                            </div>
+                            <div class="card-second">
+                                <p>12.374 views | 2 tháng trước</p>
+                                <div class="dot-group">
+                                    <svg height="20" width="40">
+                                        <circle cx="6" cy="10" r="5" class="dot-primary" />
+                                        <circle cx="20" cy="10" r="5" class="dot-secondary" />
+                                        <circle cx="35" cy="10" r="5" class="dot-success" />
+                                    </svg>
                                 </div>
                             </div>
                         </div>
@@ -156,7 +252,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
-    <script src="/js/app.js"></script>
 </body>
 
 </html>
