--- a/pages/payment.html
+++ b/pages/payment.html
@@ -6,14 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 
 <body>
-    <!-- Vue sidebar component -->
-    <div id="sidebar-component">
-        <sidebar></sidebar>
-    </div>
+    <nav class="sidebar">
+        <div class="sidebar-content">
+            <h2>MOTION STATION</h2>
+            <select class="form-control">
+                <option value="0" disabled>Choose Language</option>
+                <option value="1">English</option>
+                <option value="2">Korean</option>
+                <option value="3">Vietnamese</option>
+                <option value="4">Japanese</option>
+            </select>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <a href="/index.html">
+                        <img src="/assets/Group 398.svg" alt="Dashboard">
+                        <span>Dashboard</span>
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/pages/supscriptions.html">
+                        <img src="/assets/Group 399.svg" alt="Supscriptions">
+                        <span>Supscriptions</span>
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/pages/premium.html">
+                        <img src="/assets/Path 242.svg" alt="Premium">
+                        <span class="text-premium">Premium</span>
+                    </a>
+                </li>
+                <li class="list-group-item line-bottom"></li>
+                <li class="list-group-item">
+                    <a href="/pages/uploadvideo.html">
+                        <img src="/assets/Group 400.svg" alt="Upload">
+                        <span>Upload</span>
+                    </a>
+                </li>
+                <li class="list-group-item login">
+                    <a href="/pages/createaccount.html">
+                        <img src="/assets/Avatar.svg" alt="avatar">
+                        <span>Name Surname/Log in</span>
+                    </a>
+                </li>
+                <li class="list-group-item line-top"></li>
+                <li class="list-group-item">
+                    <h6>IMAGES THAT COMES TO LIFE</h6>
+                </li>
+                <li class="list-group-item social-network">
+                    <a href="#" class="icon">
+                        <img class="facebook" src="/assets/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="#" class="icon">
+                        <img class="instagram" src="/assets/instagram.svg" alt="Instagram">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <main>
         <button id="sidebar-button" class="btn btn-primary btn-sm" >
             <img alt="list-icon" src="/assets/list.svg">
@@ -88,7 +140,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
-    <script src="/js/app.js"></script>
 </body>
 
 </html>
