--- a/pages/payment.html
+++ b/pages/payment.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
-    <nav class="sidebar">
+    <nav class="sidebar sidebar-active">
+        <button class="btn btn-close"><img src="/assets/x.svg" alt="close"></button>
         <div class="sidebar-content">
             <h2>MOTION STATION</h2>
             <select class="form-control">
@@ -66,7 +67,7 @@
             </ul>
         </div>
     </nav>
-    <main>
+    <main class="main-active">
         <button id="sidebar-button" class="btn btn-primary btn-sm" >
             <img alt="list-icon" src="/assets/list.svg">
         </button>
@@ -128,7 +129,7 @@
                     </div>
                     <div class="form-group">
                         <label for="cvv">CVV</label>
-                        <input type="number" class="form-control" name="cvv" id="cvv">
+                        <input type="text" class="form-control" name="cvv" id="cvv">
                     </div>
                 </div>
             </form>
@@ -137,8 +138,8 @@
             </div>
         </section>
     </main>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/js/script.js"></script>
 </body>
 
