--- a/pages/uploadvideo.html
+++ b/pages/uploadvideo.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Video</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
-    <nav class="sidebar">
+    <nav class="sidebar sidebar-active">
+        <button class="btn btn-close"><img src="/assets/x.svg" alt="close"></button>
         <div class="sidebar-content">
             <h2>MOTION STATION</h2>
             <select class="form-control">
@@ -66,7 +67,7 @@
             </ul>
         </div>
     </nav>
-    <main>
+    <main class="main-active">
         <button id="sidebar-button" class="btn btn-primary btn-sm">
             <img alt="list-icon" src="/assets/list.svg">
         </button>
@@ -125,8 +126,7 @@
         </section>
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/js/script.js"></script>
 </body>
 
